[package]
name = "konva"
version = "0.1.0"
edition = "2021"


[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.22"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
]